[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://src/scenes/inventor/inventor_mode.gd" id="1"]
[ext_resource type="PackedScene" path="res://src/scenes/machine_canvas.tscn" id="2"]
[ext_resource type="PackedScene" path="res://src/ui/component_tray.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/ui/simulation_controls.tscn" id="4"]

[node name="InventorMode" type="Node2D"]
script = ExtResource("1")

[node name="MachineCanvas" parent="." instance=ExtResource("2")]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Toolbar" type="HBoxContainer" parent="UILayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PurposeLabel" type="Label" parent="UILayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 44.0
offset_right = -8.0
offset_bottom = 64.0
horizontal_alignment = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)

[node name="SimulationControls" parent="UILayer" instance=ExtResource("4")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -44.0
offset_right = 200.0
offset_bottom = -8.0

[node name="ComponentTray" parent="UILayer" instance=ExtResource("3")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -100.0
offset_right = 350.0
grow_horizontal = 2
grow_vertical = 0

[node name="ParameterPanel" type="PanelContainer" parent="UILayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -150.0
offset_right = -8.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
script = preload("res://src/ui/parameter_panel.gd")
